<resources>
    <string name="app_name">Github User App</string>
    <string name="url">url</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="search_user">Tolong masukkan username</string>
    <string name="favorite_data">My Favorite</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository_data">NULL</string>
    <string name="followers_data">NULL</string>
    <string name="following_data">NULL</string>
    <string name="name">Name</string>
    <string name="images">images</string>
    <string name="favorite">My Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>